add custom auth success event handler